--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,7 @@ jobs:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       # Construir la imagen
       - name: 'Build container image'
-        run: docker build -t registry.digitalocean.com/munyaal-docr/munyaal/website:$(echo $GITHUB_SHA | head -c7) .
+        run: docker build -f dockerfile.prod -t registry.digitalocean.com/munyaal-docr/munyaal/website:$(echo $GITHUB_SHA | head -c7) .
       # Log In to Registry
       - name: 'Log in to DigitalOcean Container Registry with short-lived credentials'
         run: doctl registry login --expiry-seconds 1200
